feat: タイトル整備

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bad-omikuji</title>
+    <title>神の導きを受けましょう</title>
+    <meta name="description" content="常に大凶が出てバカ煽り散らかされるジョークアプリです。">
   </head>
   <body>
     <div id="root"></div>
