add: `umami.is`っていうトラッカー追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>神の導きを受けましょう</title>
     <meta name="description" content="常に大凶が出てバカ煽り散らかされるジョークアプリです。">
+    <script async src="https://trk.hato810424.f5.si/script.js" data-website-id="a849aa23-13df-4a6e-b894-3cd497d5a432"></script>
   </head>
   <body>
     <div id="root"></div>
